# finallfastapi131

./: main.py  pyproject.toml
postgres-data/: postmaster.pid
postgres-data/global/: pg_control
src/conf/: dburl.py
src/contacts/: models.py
src/db/: connectdb.py
src/repository/: functiondb.py  functionuser.py
src/routes/: auth.py  myrouts.py  users.py
src/schemas/: checkschemas.py
src/services/: auth.py  email.py
